# formula-draw-demo

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  appWindow.cpp  appWindow.h  qt_texwidget.cpp  qt_texwidget.h
